--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -1,4 +1,19 @@
 services:
+  frontend:
+    container_name: mengkocak-app-frontend
+    build:
+      context: frontend
+      dockerfile: Dockerfile
+      args:
+        API_URL: http://mengkocak-app-backend:3000/
+    restart: always
+    ports:
+      - 3001:3001
+    volumes:
+      - ./frontend:/frontend
+      - /frontend/.next
+      - /frontend/node_modules
+
   backend:
     container_name: mengkocak-app-backend
     build:
@@ -11,15 +26,9 @@ services:
       - db
     env_file:
       - ./backend/.env
-    develop:
-      watch:
-        - action: sync
-          path: .
-          target: .
-          ignore:
-            - node_modules/
-        - action: rebuild
-          path: package.json
+    volumes:
+      - ./backend:/backend
+      - /backend/node_modules
 
   db:
     image: postgres:14
