--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -5,7 +5,7 @@ services:
       context: frontend
       dockerfile: Dockerfile
       args:
-        API_URL: http://mengkocak-app-backend:3000/
+        API_URL: http://mengkocak-app-backend:3000
     restart: always
     ports:
       - 3001:3001
